# minecraft-casio

./: .gitignore  32.nbt  CMakeLists.txt  README.md  bigworld.nbt  chunk.nbt  chunk.txt  convert.py
assets-cg/: fxconv-metadata.txt  icon-cg.xcf
src/: triangle2.S  triangle2.S.addend  triangle2.S.backtofront  triangle2.S.memshift  triangle2.S.safe  triangle2.c
src/data/: exampleChunk.h
src/game/entity/: player.cpp  player.h
src/game/world/: chunk.cpp  chunk.h  raycast.cpp  raycast.h  world.cpp  world.h
src/libs/: small3dlib-defs.h  small3dlib.h
src/render/: main.cpp  meshing.cpp  meshing.h  render_config.h
src/util/: angle.cpp  angle.h  axis.h  boundingBox.cpp  boundingBox.h  colour.h  int.h  libnumToS3L.cpp  libnumToS3L.h  numConsts.h  util.h
